added a pom file for the maven addicted. Note that the maven build does not seem to run any tests for the moment.

--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 //add all the java-stuff
 apply plugin: 'java'
 
-//so we don't have to write gradle test :)
+//so we don't have to write 'gradle test' on the command line :)
 defaultTasks 'test'
 
 //declare the repository we're using
