calling gradle without arguments now cleans and tests, this because running test without cleaning would not always run the tests

--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,7 @@
 apply plugin: 'java'
 
 //so we don't have to write 'gradle test' on the command line :)
-defaultTasks 'test'
+defaultTasks 'clean', 'test'
 
 //declare the repository we're using
 repositories {
